# amnezia-central-api

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0f5f712579f1_add_uq_constract_for_fields_app_type_.py  5f2be39f5bc0_add_is_admin_field_in_clients_model.py  9ab7c0c9b3be_initial_migration.py  a64f9d224f71_added_new_model_tariff.py  d24eb1329d9f_made_filed_expires_at_in_client_model_.py  dca912ffabca_edit_cluster_and_peer_models_fields.py  e040cd9ba6ca_added_state_fields_into_clustermodel.py  e5001e68dc64_edit_host_and_port_fielt_in_cluster_.py
src/: Dockerfile  main.py
src/api/v1/auth/: router.py  schemas.py
src/api/v1/clients/: logger.py  router.py  schemas.py
src/api/v1/clients/crud/: create.py  delete.py  read.py  subscribe.py  update.py
src/api/v1/clusters/: logger.py  router.py  schemas.py
src/api/v1/management/: __init__.py  http_client.py
src/api/v1/peers/: logger.py  router.py  schemas.py
src/api/v1/statistics/: logger.py  router.py  schemas.py
src/api/v1/tariffs/: logger.py  router.py  schemas.py
src/database/: connection.py  models.py
src/database/management/default/: admin_data.py
src/database/management/operations/: admin.py  client.py  cluster.py  peer.py  statistics.py  tariff.py
src/management/: logger.py  security.py  settings.py
src/minio/: __init__.py  client.py  connection.py
src/redis/: __init__.py  client.py  connection.py
src/redis/management/: __init__.py  cluster_status.py
src/services/: scheduler.py
src/services/tasks/: cleanup_clients.py
(+24 files in other folders)
